--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:paddingHorizontal="16dp"
     android:layout_height="match_parent"
-    tools:context=".fragments.note.NoteFragment">
+    tools:context=".iu.fragments.note.NoteFragment">
 
     <TextView
+        android:id="@+id/txt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
         android:textSize="28sp"
         android:fontFamily="@font/potta_one"
         android:layout_gravity="center_horizontal"
         android:text="Hello my friend♥" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/et_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"/>
+
+    <Button
+        android:id="@+id/btn_save"
+        android:text="Save"
+        android:backgroundTint="#D52F2F"
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
