NoteAdapter, ColorAdapter, drawable, Models, item note add

--- a/app/src/main/res/layout/fragment_on_board.xml
+++ b/app/src/main/res/layout/fragment_on_board.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#252525"
-    tools:context=".iu.fragments.onBoard.OnBoardFragment">
+    tools:context=".ui.fragments.onBoard.OnBoardFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_paper2"
