--- a/app/src/main/res/layout/fragment_on_board_paging.xml
+++ b/app/src/main/res/layout/fragment_on_board_paging.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="#252525"
     android:paddingHorizontal="30dp"
-    tools:context=".iu.fragments.onBoard.OnBoardPagingFragment">
+    tools:context=".ui.fragments.onBoard.OnBoardPagingFragment">
 
     <TextView
         android:id="@+id/txt_notes"
