--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#D88B02</color>
+    <color name="dark_gray">#252525</color>
+    <color name="gray">#C4C4C4</color>
+    <color name="yellow">#FFF599</color>
+    <color name="purple">#B69CFF</color>
+    <color name="pink">#FD99FF</color>
+    <color name="orange_pink">#FB9E9E</color>
+    <color name="green">#91F48F</color>
+    <color name="blue">#9EFFFF</color>
 </resources>
